fixed typo, added links, changed flex on header

--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,24 @@ body{
 header {
     text-align: center;
 }
+h1 {
+    margin-bottom: 0;
+}
+h2 {
+    margin: 0;
+}
 
 /* TODO
     - make it so they stack on mobile
     - make it look more compress on a larger screen
 */
+
+header h2 {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    column-gap: 1em;
+}
 
 
 .row {
@@ -42,6 +55,17 @@ header {
 }
 
 @media screen and (max-width: 768px) {
+    header h2 {
+        display: flex;
+        flex-direction:column ;
+        align-items: center;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    }
+    header h2 p {
+        margin: 0;
+        margin-bottom: auto;
+    }
     .row {
         display: flex;
         flex-direction:column;
